Revert "Fix title links positioning on tablet"
This reverts commit f77e949365eb090f71cbe004b862c219562bf538.

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -48,9 +48,9 @@ body > .links, #title_links
   position: absolute
   bottom: 0
   display: inline
-  margin: 0 0 -1px -54px
+  margin: 0 0 0 -50px
   padding: 1px 0 0 4px
   border-top: solid 1px #ccc
   border-right: solid 1px #ccc
   border-top-right-radius: 5px
-  z-index: -10
+
